--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.22.0",
+		"google": "^2.1.0",
 		"mapbox": "^1.0.0-beta10",
 		"mapbox-gl": "^3.10.0",
 		"phosphor-svelte": "^3.0.1"
